# MyRecipes

./: .gitignore  Gemfile  README.md  _config.yml  compile.py  generate_navigation.py  index.md  pyproject.toml
_data/: navigation.yml
_includes/: masthead.html  nav_list.html  page_note.html  page_source.html  sidebar.html
_layouts/: index.html  recipe.html  single.html
_posts/: 2022-07-25-welcome-to-jekyll.markdown
_recipes/: drink.md
_recipes/asian/: chinese_cucumber_salad.md  hangover_noodles.md  sichuan_wontons.md  yakiniku_med_syrlig_vitkålssallad.md  yamitsuki.md
_recipes/bakery/: chocolate_chip_cookies.md  thebirkes.md
_recipes/brunch/: french_toast_sticks.md
_recipes/cocktails/: 1910.md  churchills_breakfast.md  churchils_breakfast.md  day-quiri.md  division_bell.md  dublin_minstrel.md  easy_speak.md  falernum.md  hawaiian_sunset.md  iron_ranger.md  mezcal_sour.md  miracle_pill.md  pina_verde.md  sidewinders_fang.md  tonic_water.md  yellow_smash.md  zombie.md
_recipes/meat/: buffalo_hot_wings.md  kycklingspett_med_jordnoetssaas.md  lamb_meatballs_with_fregola.md  pulled_pork.md
_recipes/other/: onion_rings.md
_recipes/pasta/: asiago_chicken_pasta.md  macaroni_n_cheese.md
_recipes/sauces/: kycklingspett_med_jordnoetssaas.md  peanut_butter_sauce.md  portvinssaas.md  ranch.md
_recipes/savoury bakery/: upplandskubb.md
_recipes/soups/: hot_roasted_corn_shoup.md  krya_soppa.md
_recipes/sweet bakery/: monkey_bread.md  thebirkes.md
_sass/: custom.scss  minimal-mistakes.scss
python/: RecipeModel.py  generate_navigation.py  scrape_recipe.py
(+9 files in other folders)
