[tool.poetry]
name = "myrecipes"
version = "0.1.0"
description = ""
authors = ["Sebastian <se.hegardt@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
click = "^8.1.3"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
